# hybrid_pdf_parser

./: .gitignore  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  demo.ipynb  env.example  example_usage.py  pyproject.toml
docs/: DESIGN.md  PROMPTS.md  README.md
src/hybrid_pdf_parser/: __init__.py  __version__.py  simple.py
src/hybrid_pdf_parser/config/: __init__.py  default.yaml  schema.py
src/hybrid_pdf_parser/core/: __init__.py  adjudicator.py  alignment.py  extract_text.py  extract_vision.py  heuristics.py  pipeline.py  provenance.py  render.py  segmentation.py  utils.py
src/hybrid_pdf_parser/vendors/: __init__.py  base.py  ollama_backend.py  openai_backend.py
tests/: __init__.py  test_alignment.py  test_heuristics.py  test_pipeline_integration.py  test_segmentation.py  test_simple.py  test_utils.py
tests/fixtures/: README.md
